--- a/EmployeeDirectory.css
+++ b/EmployeeDirectory.css
@@ -10,7 +10,7 @@ button{
    cursor: pointer;
 }
 div {
-   border:1px solid black;
+/*    border:1px solid black; */
    margin: 10px;
 }
 header .logo{
